logs/memacs.log
Listing '.'...
Listing './bin'...
Compiling './bin/memacs_arbtt.py'...
Compiling './bin/memacs_battery.py'...
Compiling './bin/memacs_csv.py'...
Compiling './bin/memacs_example.py'...
Compiling './bin/memacs_filenametimestamps.py'...
Compiling './bin/memacs_git.py'...
Compiling './bin/memacs_gpx.py'...
Compiling './bin/memacs_ical.py'...
Compiling './bin/memacs_imap.py'...
Compiling './bin/memacs_lastfm.py'...
Compiling './bin/memacs_mumail.py'...
Compiling './bin/memacs_phonecalls.py'...
Compiling './bin/memacs_phonecalls_superbackup.py'...
Compiling './bin/memacs_photos.py'...
Compiling './bin/memacs_rss.py'...
Compiling './bin/memacs_simplephonelogs.py'...
Compiling './bin/memacs_sms.py'...
Compiling './bin/memacs_sms_superbackup.py'...
Compiling './bin/memacs_svn.py'...
Compiling './bin/memacs_twitter.py'...
Compiling './bin/memacs_whatsapp.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/bin'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/feedparser-5.2.1.egg-info'...
Listing './lib/python3.5/site-packages/icalendar'...
Listing './lib/python3.5/site-packages/icalendar/tests'...
Listing './lib/python3.5/site-packages/icalendar/tests/hypothesis'...
Listing './lib/python3.5/site-packages/icalendar-4.0.0.dist-info'...
Listing './lib/python3.5/site-packages/memacs'...
Compiling './lib/python3.5/site-packages/memacs/battery.py'...
***   File "./lib/python3.5/site-packages/memacs/battery.py", line 87
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/csv.py'...
***   File "./lib/python3.5/site-packages/memacs/csv.py", line 102
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/filenametimestamps.py'...
***   File "./lib/python3.5/site-packages/memacs/filenametimestamps.py", line 186
    except TimestampParseException, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/git.py'...
***   File "./lib/python3.5/site-packages/memacs/git.py", line 150
    except UnicodeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/ical.py'...
***   File "./lib/python3.5/site-packages/memacs/ical.py", line 16
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/imap.py'...
***   File "./lib/python3.5/site-packages/memacs/imap.py", line 150
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/lastfm.py'...
***   File "./lib/python3.5/site-packages/memacs/lastfm.py", line 85
    except pylast.WSError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/memacs/lib'...
Compiling './lib/python3.5/site-packages/memacs/lib/memacs.py'...
***   File "./lib/python3.5/site-packages/memacs/lib/memacs.py", line 191
    except SystemExit, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/lib/orgformat.py'...
***   File "./lib/python3.5/site-packages/memacs/lib/orgformat.py", line 247
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/lib/orgproperty.py'...
***   File "./lib/python3.5/site-packages/memacs/lib/orgproperty.py", line 67
    except Keyerror, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/lib/orgwriter.py'...
***   File "./lib/python3.5/site-packages/memacs/lib/orgwriter.py", line 83
    print output,
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/memacs/lib/reader.py'...
***   File "./lib/python3.5/site-packages/memacs/lib/reader.py", line 33
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/memacs/lib/tests'...
Compiling './lib/python3.5/site-packages/memacs/photos.py'...
***   File "./lib/python3.5/site-packages/memacs/photos.py", line 36
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/memacs/sms.py'...
***   File "./lib/python3.5/site-packages/memacs/sms.py", line 320
    print "tempfile line " + str(line_number) +  " [" + str(temp_xml_file) + "]"
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/memacs/tests'...
Compiling './lib/python3.5/site-packages/memacs/tests/orgformat_test.py'...
***   File "./lib/python3.5/site-packages/memacs/tests/orgformat_test.py", line 171
    time.struct_time([1981,1,15,15,30,02,0,0,0]),
                                       ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/memacs/twitter.py'...
***   File "./lib/python3.5/site-packages/memacs/twitter.py", line 54
    print "Error: ", sys.exc_info()[0]
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/memacs-2017.12.26.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
